feat: use generated models for exns (#93)
* using generated models for exchanges

* fix: import

* feat: apply models to group exns

* test: fix MultiSigJoinTest with new exns

---------

Co-authored-by: Patrick Vu <patrick.vu@sotatek.com>